SONARKT-797 Fix Quality Gate (#754)